fixed rating misalignment

--- a/app/assets/scss/modules/_rating.scss
+++ b/app/assets/scss/modules/_rating.scss
@@ -37,7 +37,7 @@
     position:absolute;
     top:3px;
     left:2px;
-    bottom:5px;
+    bottom:7px;
     right:0;
     width:97%;
     background-color:$mainGold;
